app/objects/Poulet__c.object
<CustomObject>
    <fields>
        <fullName>Poids__c</fullName>
        <label>Poids</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prix_Unitaire__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Prix Unitaire</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>poulailler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>poulailler</label>
        <referenceTo>Poulailler__c</referenceTo>
        <relationshipLabel>Poulets</relationshipLabel>
        <relationshipName>Poulets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Poulet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poulets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>